# TraquitoJetpack_DLP

./: .gitmodules  CMakeLists.txt  Dockerfile  README.md  TraquitoJetpack.code-workspace  build.sh  picoinf_fork_instructions.html
app/Traquito/: Application.h  CMakeLists.txt  Configuration.h  SubsystemGps.h  SubsystemTx.h  main.cpp
publish/: TraquitoJetpack_LowPower_20260108.uf2  TraquitoJetpack_Standard.uf2
src/: Application.h  CMakeLists.txt  Configuration.h  CopilotControlJavaScript.h  CopilotControlMessageDefinition.h  CopilotControlScheduler.cpp  CopilotControlScheduler.h  SubsystemCopilotControl.h  SubsystemGps.h  SubsystemTx.h  SubsystemUserDefined.h  main.cpp
